# dodbm

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml
providers/mysql/source/: CMakeLists.txt  premake5.lua
providers/mysql/tests/: CMakeLists.txt  main.cpp  premake5.lua
providers/mysql/tests/mocks/: m20180903205850_mock.cpp  m20180903205850_mock.hpp  m20180903211910_mock_invalid.cpp  (+1 more)
source/: CMakeLists.txt  premake5.lua
source/dodbm/: base_provider.hpp  collation.cpp  collation.hpp  command.cpp  command.hpp  command_executor.cpp  command_executor.hpp  connection.hpp  db_data.hpp  db_result.cpp  db_result.hpp  db_value.cpp  db_value.hpp  dodbm.cpp  dodbm.hpp  exception.hpp  history_repository.cpp  history_repository.hpp  migration.cpp  migration.hpp  migrations.cpp  migrations.hpp  name_of.hpp  nameof.hpp  operation.cpp  operation.hpp  operation_with_schema.cpp  operation_with_schema.hpp  provider.cpp  provider.hpp  repository.cpp  repository.hpp  sql_generator.cpp  sql_generator.hpp  sql_generator_helper.cpp  sql_generator_helper.hpp  stdafx.cpp  stdafx.hpp  storage_engine.cpp  storage_engine.hpp  (+3 more)
source/dodbm/builders/: add_column.hpp  add_foreign_key.cpp  add_foreign_key.hpp  add_primary_key.hpp  add_unique_constraint.hpp  alter_column.hpp  alter_database.hpp  alter_table.cpp  alter_table.hpp  column.hpp  columns.hpp  constraints.cpp  constraints.hpp  create_index.hpp  create_table.cpp  create_table.hpp  delete_data.cpp  delete_data.hpp  drop_column.hpp  drop_foreign_key.hpp  drop_index.hpp  drop_primary_key.hpp  drop_table.hpp  drop_unique_constraint.hpp  ensure_schema.hpp  insert_data.cpp  insert_data.hpp  migration.cpp  migration.hpp  operation.hpp  operation_with_schema.hpp  rename_column.hpp  rename_index.hpp  rename_table.cpp  rename_table.hpp  update_data.cpp  update_data.hpp
source/dodbm/migrations/: migration.hpp  migration_builder.hpp
source/dodbm/operations/: add_column.cpp  add_column.hpp  add_foreign_key.cpp  add_foreign_key.hpp  add_primary_key.cpp  add_primary_key.hpp  add_unique_constraint.cpp  add_unique_constraint.hpp  alter_column.cpp  alter_column.hpp  alter_database.cpp  alter_database.hpp  alter_table.cpp  alter_table.hpp  base_operation.cpp  base_operation.hpp  create_index.cpp  create_index.hpp  create_table.cpp  create_table.hpp  custom_sql.cpp  custom_sql.hpp  delete_data.cpp  delete_data.hpp  drop_column.cpp  drop_column.hpp  drop_foreign_key.cpp  drop_foreign_key.hpp  drop_index.cpp  drop_index.hpp  drop_primary_key.cpp  drop_primary_key.hpp  drop_schema.cpp  drop_schema.hpp  drop_table.cpp  drop_table.hpp  drop_unique_constraint.cpp  drop_unique_constraint.hpp  ensure_schema.cpp  ensure_schema.hpp  (+11 more)
source/dodbm/providers/: base_provider.hpp
tests/: CMakeLists.txt  collation.cpp  db_value.cpp  name_of.cpp  nameof.cpp  premake5.lua  repository.cpp  sql_generator.cpp  sql_generator_helper.cpp  storage_engine.cpp
tests/mocks/: charsets.hpp  collations.hpp  connection.cpp  connection.hpp  provider.cpp  provider.hpp  storage_engines.hpp  types.hpp
tests/operations/: column.cpp  constraints.cpp  custom_sql.cpp  data.cpp  database.cpp  index.cpp  schema.cpp  table.cpp
(+64 files in other folders)
